--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.7.0
   shared_preferences: ^2.3.2
   provider: ^6.1.2
+  flutter_floating_bottom_bar: ^1.2.1+1
 
 dev_dependencies:
   flutter_test:
