--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.3.2
   provider: ^6.1.2
   flutter_floating_bottom_bar: ^1.2.1+1
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
