--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_floating_bottom_bar: ^1.2.1+1
   page_transition: ^2.1.0
   url_launcher: ^6.3.1
+  redacted: ^1.0.12
 
 dev_dependencies:
   flutter_test:
